--- a/src/countdown.css
+++ b/src/countdown.css
@@ -1,13 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:wght@1,700&display=swap");
-
 body {
   text-align: center;
   margin-top: 15%;
   height: 100%;
   font-size: 12em;
   background-color: darkseagreen;
-  font-style: italic;
-  font-family: "Comic Neue";
+  font-family: Helvetica, sans-serif;
+  font-weight: bold;
   background-size: 30%;
 }
 
@@ -28,7 +26,7 @@ body {
 
 #start svg,
 #stop svg {
-  height: 10em;
+  height: 25em;
   width: 10em;
   margin-top: 14em;
 }
